--- a/_config.yml
+++ b/_config.yml
@@ -17,8 +17,8 @@ title: CS 276
 tagline: Graduate Cryptography
 description: Course website for CS 276 -- Graduate Cryptography
 # author: Kevin Lin
-baseurl: '' # the subpath of your site, e.g. /blog
-url: 'https://crypto-berkeley.github.io/cs276-fall24' # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: '/cs276-fall24' # the subpath of your site, e.g. /blog
+url: 'https://crypto-berkeley.github.io/' # the base hostname & protocol for your site, e.g. http://example.com
 exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "vendor"]
 favicon_ico: "/assets/images/alice.ico"
 
